# ternary-gate

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: lib.rs
