[package]
name = "ternary-gate"
version = "0.1.0"
edition = "2021"
description = "Ternary gating for mixture-of-experts on GPU. Each expert gets a ternary weight {-1=block, 0=skip, +1=activate}. Sparse activation via ternary decisions saves 16x memory."
license = "Apache-2.0"
repository = "https://github.com/SuperInstance/ternary-gate"
documentation = "https://docs.rs/ternary-gate"
